# observer

./: .gitignore  README.md  app.py  pyproject.toml
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/utils/: request.js  request.ts
frontend/src/views/login/: index.vue
observer/: __init__.py  config.py
observer/api/sys_info/: controllers.py
observer/api/users/: controllers.py
observer/api/users/model/: role.py  user.py  user_role.py
observer/utils/: auth_util.py  encrypt_util.py  responseUtil.py  response_util.py
tests/: test_observer.py
