[tool.poetry]
name = "observer"
version = "0.1.0"
description = "后台监控"
authors = ["wlion <1923312209@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
