[tool.poetry]
name = "observer"
version = "0.1.0"
description = "后台监控"
authors = ["wlion <1923312209@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
Flask-SQLAlchemy = "^2.4"
flask_httpauth = "^3.3"
itsdangerous = "^1.1"
PyMySQL = "^0.9.3"
flask-socketio = "^4.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
